<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/common_plus_signin_btn_text_dark_disabled"
    tools:context="com.sam_chordas.android.stockhawk.ui.DetailActivity">

    <TextView
        android:id="@+id/detail_stock_symbol"
        style="@style/StockSymbolTextStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/stock_symbol_content_description"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingEnd="16dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        android:paddingStart="16dp"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:text="@string/stock_symbol_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Title"
        />

    <LinearLayout
        android:id="@+id/detail_stock"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/detail_stock_symbol"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="16dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/detail_stock_value"
            style="@style/BidPriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/stock_price_content_description"
            android:gravity="left|center_vertical"
            tools:text="@string/stock_value_text"/>


        <TextView
            android:id="@+id/detail_change_price"
            style="@style/BidPriceTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/stock_price_change_content_description"
            android:paddingEnd="10dp"
            android:paddingRight="10dp"
            tools:text="@string/stock_symbol_change"/>

        <TextView
            android:id="@+id/detail_change_percentage"
            style="@style/PercentChangeTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:contentDescription="@string/stock_percent_change_content_description"
            android:paddingEnd="3dp"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:paddingStart="3dp"
            tools:text="@string/string_percent_change"/>
    </LinearLayout>

    <com.github.mikephil.charting.charts.LineChart
        android:id="@+id/chart"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/detail_stock"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="4dp"
        android:contentDescription="@string/stock_graph_content_description"/>
</RelativeLayout>

